tests/error/move_across_foreach_loop_boundary.bz
function test()
{
	let i = 0;
	let arr = [2: int32]();
	for (const _ in arr)
	{
		move i;
	}
}
